jsapp/scss/components/_kobo.form-gallery.scss
@import "~slick-carousel/slick/slick.css";
@import "~slick-carousel/slick/slick-theme.css";

$icon-font-size: 40px;

@mixin aspect-ratio($width, $height) {
  position: relative;

  &:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: $height / $width * 100%;
  }

  > div, a {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

.loadmore-div {
  width: 100%;
  padding-top: 30px;
}

.loadmore-button {
  font-weight: 500;

  &:hover {
    background: #E4E4E4;
  }
}

.one-one {
  @include aspect-ratio(1, 1);
}

.asset-gallery {
  height: 100%;
  overflow: auto;
  padding: 23px 0 40px 0;

  &:after {
    content: "";
    height: 100px;
    display: block;
  }

  > div:not(.form-view__cell) {
    padding: 0px 40px;
    margin-bottom: 20px;

    > h2 {
      color: #6E777D;
      font-weight: normal;
    }
  }

  .styled-select {
    select {
      background: transparent;
      border: none;
      font-size: 14px;
      height: 29px;
      padding: 5px;

      /* If you add too much padding here, the options won't show in IE */
      width: 268px;
    }
  }

  &__heading {
    display: flex;
    justify-content: space-between;
    align-items: center;

    &__count {
      color: #4E525F;
      font-size: 1.2em;
    }
  }

  &__grid {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin-left: -10px;

    h5, h2 {
      font-size: 1.5em;
      margin: 15px 0px;
      font-weight: normal;
    }

    // >div{
    //     width: 100%;
    //     padding-top: 30px;
    // }
    &-item {
      $root: &;

      margin: 0 15px 15px 0;
      display: inline-block;
      cursor: pointer;
      background-color: lighten($cool-gray, 30%);

      &.col6 {
        width: 50%;
      }

      &.col4 {
        display: inline-block;
        margin: 10px 0 0 10px;
        width: calc(100% * (1/3) - 10px - 1px);
      }

      &.per-row6 {
        display: inline-block;
        margin: 10px 0 0 10px;
        width: calc(16.6666666667% - 10px - 1px);
        height: 16.6666666667%;
      }

      &.per-row10 {
        display: inline-block;
        margin: 10px 0 0 10px;
        width: calc(10% - 10px - 1px);
        height: 10%;
      }

      &__overlay {
        opacity: 0;

        // transition: 0.3s all ease-in-out;
        background: rgba(0, 0, 0, 0.7);

        .text {
          color: #fff;
          position: absolute;
          left: 0;
          top: 0;
          width: 100%;
          height: 100%;
          padding: 10px;

          h5 {
            font-size: 1em;
            font-weight: normal;
            margin: 0px;
          }

          p {
            position: absolute;
            bottom: 0px;
          }
        }

        #{$root}:hover & {
          opacity: 1;
        }
      }
    }
  }

  &__heading {
    flex-wrap: nowrap;
    justify-content: space-between;

    &__search-filter {
      min-width: 250px;
      display: flex;
      align-items: center;
      justify-content: space-between;

      .text-display {
        display: inline-block;
        padding: 10px;
        border-radius: 2px;
        border: none;
        background-color: #fff;
        width: 220px;
        color: $cool-gray;

        @include box-shadow;
      }

      .Select--single {
        display: inline-block;
        margin-left: 10px;
      }

      .icon-button-select {
        .Select-control {
          border: none;
          width: 32px;
          height: 32px;
          border-radius: 0px;
          background: transparent;
          box-shadow: none;
          cursor: pointer;
          position: relative;

          &:before {
            content: '\e803';
            font-family: "k-icons";
            font-style: normal;
            font-weight: normal;
            font-size: 36px;
            position: absolute;
            top: 6px;
            color: $cool-gray;
          }
        }

        .Select-placeholder {
          display: none;
        }

        .Select-menu-outer {
          top: 15px;
          right: 0px;
          width: 200px;
        }

        .Select-clear-zone {
          display: none;
        }

        .Select-arrow-zone {
          display: none;
        }

        .Select-value {
          text-indent: -99999999px;
        }
      }
    }
  }

  &__modal {
    height: 100%;

    .modal-body {
      height: 100%;
      overflow: hidden;
      display: flex;
      flex-wrap: wrap;
      padding: 0;

      .col8 {
        width: 75%;
        background: #000;
        display: inline-block;
      }

      .col4 {
        width: 25%;
        background: #fff;
        display: inline-block;
      }

      .slick-slider {
        height: 100%;

        .slick-list {
          height: 100%;

          .slick-track {
            height: 100%;

            .slick-slide {
              height: auto;
              top: 50%;
              transform: translateY(-50%);
              position: absolute;
              width: 100%;

              img {
                // vertical-align: middle;
                // display: inline-block;
                // width: 100%;
                // height: auto;
                // max-width: 100%;
                display: block;
                height: 100%;
                margin: 0 auto;
                max-width: 100%;
                object-fit: contain;
              }
            }
          }
        }

        /* SLICK ARROWS */
        .slick-arrow {
          display: block;
          height: 100%;
          width: 60px;
          background: rgba(0, 0, 0, 0.6);
          z-index: 8;

          .k-icon-next, .k-icon-prev {
            color: #fff;
            font-size: 60px;
          }

          &.slick-disabled {
            .k-icon-next, .k-icon-prev {
              opacity: 0.3;
            }
          }

          &.slick-next {
            right: 0;

            &:before {
              content: '';
            }
          }

          &.slick-prev {
            left: 0;

            &:before {
              content: '';
            }
          }
        }
      }
    }

    &__carousel {
      position: relative;
      height: 100%;

      &__topbar {
        position: absolute;
        color: #fff;
        z-index: 9;
        width: 100%;
        padding: 10px;

        &.show {
          &--hover {
            display: flex;
            flex-wrap: nowrap;
            justify-content: space-between;
            background: -webkit-gradient(linear, 0% 40%, 0% 100%, from(#000), to(transparent));
          }
        }

        .close-modal {
          cursor: pointer;
          font-size: $icon-font-size;
        }
      }

      &.full-screen {
        width: 100% !important;
      }
    }

    &__sidebar {
      h3 {
        font-weight: 400;
        font-size: 18px;
        margin-top: 10px;
      }

      h5 {
        color: #2095F3;
        margin: 0;
        font-weight: bold;
        font-size: 1.1em;
        cursor: pointer;
      }

      &.open {
        opacity: 1;

        .toggle-info {
          float: right;
          font-size: $icon-font-size;
          margin: 10px;
          cursor: pointer;
          color: $cool-gray;
        }

        .info {
          &__outer {
            h4 {
              margin-top: 0;
              padding: 15px;
            }
          }

          &__inner {
            border-bottom: solid 1px #ccc;
            margin: 0 15px 20px;

            h5 {
              margin-top: 0;
            }
          }
        }
      }

      &.closed {
        width: 0px !important;
        opacity: 0 !important;
      }

      &__grid {
        display: flex;
        flex-wrap: wrap;
        justify-content: flex-start;
        margin-top: 5px;
        max-height: calc(100% - 30px);
        overflow: auto;

        &-item {
          width: calc(100% * (1/3) - 5px);
          margin-top: 5px;
          margin-right: 5px;

          .one-one {
            background-color: lighten($cool-gray, 35%);
          }

          &.selected {
            border: solid 2px #55B5C1;
          }

          img {
            width: 100%;
          }
        }
      }
    }

    &__sidebar-info {
      margin: 50px 30px 0px;
      padding-bottom: 20px;
      border-bottom: 1px solid $divider-color;
      height: 150px;
    }

    &__sidebar-grid-wrap {
      margin: 30px;
      height: calc(100% - 260px);
    }
  }
}

$paginated-modal-black: #414453;
$paginated-modal-gray: #c3c5d0;
$paginated-modal-blue: #1CC2D3;

.paginated-modal {
  .modal-content {
    padding: 0px;
  }

  .modal-body {
    padding: 0px;
  }

  .modal-header {
    background: transparent;
  }

  .modal-x {
    i {
      color: $paginated-modal-gray;
    }
  }

  .modal-open {
    height: 90%;
    width: 90%;
    overflow-x: hidden;
  }

  &__heading {
    border-bottom: 1px solid $paginated-modal-gray;
    padding: 0px 20px 30px 20px;

    > h2 {
      color: $paginated-modal-black;
      margin-bottom: 10px;
      font-size: 1.75em;
      margin-top: 0;
      font-weight: 500;
    }

    h4 {
      color: $paginated-modal-black;
      margin: 0px;
      font-size: 1em;
    }
  }

  &__body {
    padding: 0 20px;

    &__gallery-controls {
      display: flex;
      justify-content: space-between;
      align-items: center;
      flex: 1;
      flex-wrap: nowrap;
      padding-top: 40px;

      label {
        display: block;
        padding-bottom: 20px;
        font-size: 1.3em;
        padding-right: 10px;
      }

      .change-sort {
        // flex-grow: 1;
        .Select-control {
          min-width: 220px;
        }
      }

      .change-offset {
        display: flex;
        justify-content: center;
        align-items: center;

        .Select-control {
          min-width: 70px;
        }
      }

      &.select-direction-up {
        .Select-menu-outer {
          top: auto;
          bottom: 100%;
        }
      }
    }

    &__gallery-wrapper {
      overflow-y: auto;
      height: 50vh;
    }
  }
}

ul.pagination {
  font-size: 1.2em;
  text-align: center;

  li {
    list-style: none;
    cursor: pointer;
    display: inline-block;
    margin: 10px;

    a {
      transition: .3s ease-in-out;
      color: $paginated-modal-black;
      padding: 10px;
      min-width: 40px;
      display: block;
    }

    &.active {
      a {
        background: $paginated-modal-blue;
        border-radius: 3px;
        color: white;
        font-weight: 600;
      }

      &:hover {
        color: white;
      }
    }
  }

  li.next, li.previous {
    &:hover {
      a {
        color: $paginated-modal-blue;
      }
    }

    &.disabled {
      a {
        color: $paginated-modal-gray;
      }
    }
  }
}

